--- a/exercise 5/index.html
+++ b/exercise 5/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="static/css/style.css">
-	<script type="text/javascript" src="static/js/app.js"></script>
+	<script src="static/js/app.js" defer></script> 
 </head>
 <body>
 	<section id="nav">
