--- a/exercise 5/index.html
+++ b/exercise 5/index.html
@@ -15,6 +15,7 @@
 				</a>
 			</li>
 			<li>
+				<!--probeer - in de URL te vermeiden-->
 				<a href="#best-practices">
 					Frontend best practices
 				</a>
@@ -23,6 +24,7 @@
 	</section>
 	<main>
 		<section id="startscreen">
+			<!--h1 hoort in een header tag voor de semantische waarde-->
 			<h1>Startscreen</h1>
 		</section>
 		<section id="best-practices">
