--- a/week 2/exercise 1/index.html
+++ b/week 2/exercise 1/index.html
@@ -4,30 +4,12 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="static/css/style.css">
+	<script src="static/libs/aja.min.js" defer></script> 
 	<script src="static/js/app.js" defer></script> 
 </head>
 <body>
-	<section id="nav">
-		<ul>
-			<li>
-				<a href="#startscreen">
-					startscreen
-				</a>
-			</li>
-			<li>
-				<a href="#best-practices">
-					Frontend best practices
-				</a>
-			</li>
-		</ul>
-	</section>
-	<main>
-		<section id="startscreen">
-			<h1>Startscreen</h1>
-		</section>
-		<section id="best-practices">
-			<h1>Frontend Best Practices</h1>
-		</section>
-	</main>
+	<h1>Popular Pictures</h1>
+	<ul class="popular">
+	</ul>
 </body>
 </html>	
