--- a/week-2/exercise-1/index.html
+++ b/week-2/exercise-1/index.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="static/css/style.css">
-	<script src="static/libs/aja.min.js" defer></script> 
-	<script src="static/js/app.js" defer></script> 
+	<script src="static/libs/aja.min.js"></script> 
+	<script src="static/js/app.js" ></script> 
 </head>
 <body>
 	<h1>Popular Pictures</h1>
