added a little bit of css

--- a/week-2/exercise-2-3-4/index.html
+++ b/week-2/exercise-2-3-4/index.html
@@ -20,7 +20,7 @@
 			</li>
 			<li>
 				<a href="#photo-feed">
-					Photo feed
+					Populair photo feed
 				</a>
 			</li>
 		</ul>
@@ -31,7 +31,7 @@
 		</section>
 		<section id="photo-feed">
 			<form action="">
-				<input type="text" class="searchInput"></input>
+				<input type="text" class="searchInput" placeholder="insert a tag"></input>
 				<input type="submit" class="searchSubmit"></input>
 			</form>
 
