added function for transparency rendering

--- a/week-2/exercise-2-3-4/index.html
+++ b/week-2/exercise-2-3-4/index.html
@@ -36,7 +36,7 @@
 			</form>
 
 			<h1 data-bind="title"></h1>
-			<ul id="photoGallery">
+			<ul id="photo-gallery">
                 <li data-bind="photoId" class="photoItem">
                     <a href="" data-bind="photoLink">
                         <img data-bind="photoImage"/>
