--- a/week-1/exercise-5/index.html
+++ b/week-1/exercise-5/index.html
@@ -7,7 +7,7 @@
 	<script src="static/js/app.js" defer></script> 
 </head>
 <body>
-	<section id="nav">
+	<nav id="nav">
 		<ul>
 			<li>
 				<a href="#startscreen">
@@ -20,7 +20,7 @@
 				</a>
 			</li>
 		</ul>
-	</section>
+	</nav>
 	<main>
 		<section id="startscreen">
 			<h1>Startscreen</h1>
