added week 3 + swipe support

--- a/week-3/index.html
+++ b/week-3/index.html
@@ -8,6 +8,7 @@
 	<script src="static/libs/transparency.min.js"></script> 
 	<script src="static/libs/routie.js"></script> 
 	<script src="static/libs/underscore-min.js"></script>
+	<script src="static/libs/hammer.min.js"></script>
 	<script src="static/js/app.js" defer></script> 
 </head>
 <body>
@@ -26,6 +27,9 @@
 		</ul>
 	</section>
 	<main>
+		<div class="loader">
+			<img src="static/assets/img/loader.gif" alt="loader">
+		</div>
 		<section id="user-search">
 			<h1>Search for a user</h1>
 			<form action="">
