added modules/ not fully working yet

--- a/week-3/index.html
+++ b/week-3/index.html
@@ -9,7 +9,6 @@
 	<script src="static/libs/routie.js"></script> 
 	<script src="static/libs/underscore-min.js"></script>
 	<script src="static/libs/hammer.min.js"></script>
-	<script src="static/js/app.js" defer></script> 
 </head>
 <body>
 	<section id="nav">
@@ -116,4 +115,13 @@
 		</section>
 	</main>
 </body>
+
+
+<script src="static/js/module/user-search.js"></script> 
+<script src="static/js/module/user-feed.js"></script> 
+<script src="static/js/module/user-info.js"></script>
+<script src="static/js/module/detail-view.js"></script>  
+<script src="static/js/module/tag-feed.js"></script> 
+<script src="static/js/module/routes.js"></script> 
+<script src="static/js/module/launcher.js"></script> 
 </html>	
