fixed css and stuff

--- a/week-3/index.html
+++ b/week-3/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="user-scalable=1">
 	<title>Document</title>
 	<link rel="stylesheet" href="static/css/style.css">
 	<script src="static/libs/aja.min.js"></script> 
@@ -11,6 +12,8 @@
 	<script src="static/libs/hammer.min.js"></script>
 	<script src="static/libs/shake.js"></script>
 	<script src="static/libs/fastclick.js"></script>
+
+
 </head>
 <body>
 	<section id="nav">
