--- a/week-3/index.html
+++ b/week-3/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="user-scalable=1">
-	<title>Document</title>
+	<title>Instagram Search App</title>
 	<link rel="stylesheet" href="static/css/style.css">
 	<script src="static/libs/aja.min.js"></script> 
 	<script src="static/libs/transparency.min.js"></script> 
